Login básico con vista

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10296,6 +10296,12 @@ button,
     transition: width .2s
 }
 
+.app-logo_sign-in {
+  height: 23px;
+  width: 97px;
+  background: url(/assets/logo.png)
+}
+
 .app-header__logo .logo-src {
     height: 23px;
     width: 97px;
