--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,25 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="Content-Language" content="en">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Analytics Dashboard - This is an example dashboard created using build-in elements and components.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
-  <meta name="description" content="This is an example dashboard created using build-in elements and components.">
-  <meta name="msapplication-tap-highlight" content="no">
-  <!--
-     =========================================================
-     * ArchitectUI HTML Theme Dashboard - v1.0.0
-     =========================================================
-     * Product Page: https://dashboardpack.com
-     * Copyright 2019 DashboardPack (https://dashboardpack.com)
-     * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
-     =========================================================
-     * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-     -->
-<body>
 <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
   <div class="app-header header-shadow">
     <div class="app-header__logo">
@@ -99,6 +77,9 @@
                     <button type="button" tabindex="0" class="dropdown-item">Actions</button>
                     <div tabindex="-1" class="dropdown-divider"></div>
                     <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
+                    <button type="button" tabindex="0" class="dropdown-item">
+                      <%= link_to destroy_user_session_path, method: :delete do %>Log out<% end %>
+                    </button>
                   </div>
                 </div>
               </div>
@@ -1343,4 +1324,3 @@
     <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
   </div>
 </div>
-</html>
