--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -77,9 +77,7 @@
                     <button type="button" tabindex="0" class="dropdown-item">Actions</button>
                     <div tabindex="-1" class="dropdown-divider"></div>
                     <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
-                    <button type="button" tabindex="0" class="dropdown-item">
-                      <%= link_to destroy_user_session_path, method: :delete do %>Log out<% end %>
-                    </button>
+                    <%= link_to destroy_user_session_path, tabindex:"0" ,class:"dropdown-item",method: :delete do %>Log out<% end %>
                   </div>
                 </div>
               </div>
