--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -5,9 +5,9 @@
       <div class="header__pane ml-auto">
         <div>
           <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
-                     <span class="hamburger-box">
-                     <span class="hamburger-inner"></span>
-                     </span>
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
           </button>
         </div>
       </div>
@@ -15,20 +15,20 @@
     <div class="app-header__mobile-menu">
       <div>
         <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                  <span class="hamburger-box">
-                  <span class="hamburger-inner"></span>
-                  </span>
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
         </button>
       </div>
     </div>
     <div class="app-header__menu">
-               <span>
-               <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-               <span class="btn-icon-wrapper">
-               <i class="fa fa-ellipsis-v fa-w-6"></i>
-               </span>
-               </button>
-               </span>
+      <span>
+       <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+         <span class="btn-icon-wrapper">
+           <i class="fa fa-ellipsis-v fa-w-6"></i>
+         </span>
+       </button>
+      </span>
     </div>
     <div class="app-header__content">
       <div class="app-header-left">
@@ -86,7 +86,7 @@
                   Alina Mclourd
                 </div>
                 <div class="widget-subheading">
-                  VP People Manager
+                  <%= pretty_role(current_user.role) %>
                 </div>
               </div>
               <div class="widget-content-right header-user-info ml-3">
@@ -386,9 +386,9 @@
         <div class="header__pane ml-auto">
           <div>
             <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
-                        <span class="hamburger-box">
-                        <span class="hamburger-inner"></span>
-                        </span>
+                  <span class="hamburger-box">
+                  <span class="hamburger-inner"></span>
+                  </span>
             </button>
           </div>
         </div>
@@ -396,20 +396,20 @@
       <div class="app-header__mobile-menu">
         <div>
           <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                     <span class="hamburger-box">
-                     <span class="hamburger-inner"></span>
-                     </span>
+               <span class="hamburger-box">
+               <span class="hamburger-inner"></span>
+               </span>
           </button>
         </div>
       </div>
       <div class="app-header__menu">
-                  <span>
-                  <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                  <span class="btn-icon-wrapper">
-                  <i class="fa fa-ellipsis-v fa-w-6"></i>
-                  </span>
-                  </button>
-                  </span>
+            <span>
+            <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+            <span class="btn-icon-wrapper">
+            <i class="fa fa-ellipsis-v fa-w-6"></i>
+            </span>
+            </button>
+            </span>
       </div>
       <div class="scrollbar-sidebar">
         <div class="app-sidebar__inner">
@@ -630,9 +630,9 @@
               </button>
               <div class="d-inline-block dropdown">
                 <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn-shadow dropdown-toggle btn btn-info">
-                              <span class="btn-icon-wrapper pr-2 opacity-7">
-                              <i class="fa fa-business-time fa-w-20"></i>
-                              </span>
+                        <span class="btn-icon-wrapper pr-2 opacity-7">
+                        <i class="fa fa-business-time fa-w-20"></i>
+                        </span>
                   Buttons
                 </button>
                 <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
@@ -641,8 +641,8 @@
                       <a href="javascript:void(0);" class="nav-link">
                         <i class="nav-link-icon lnr-inbox"></i>
                         <span>
-                                          Inbox
-                                          </span>
+                                    Inbox
+                                    </span>
                         <div class="ml-auto badge badge-pill badge-secondary">86</div>
                       </a>
                     </li>
@@ -650,8 +650,8 @@
                       <a href="javascript:void(0);" class="nav-link">
                         <i class="nav-link-icon lnr-book"></i>
                         <span>
-                                          Book
-                                          </span>
+                                    Book
+                                    </span>
                         <div class="ml-auto badge badge-pill badge-danger">5</div>
                       </a>
                     </li>
@@ -659,16 +659,16 @@
                       <a href="javascript:void(0);" class="nav-link">
                         <i class="nav-link-icon lnr-picture"></i>
                         <span>
-                                       Picture
-                                       </span>
+                                 Picture
+                                 </span>
                       </a>
                     </li>
                     <li class="nav-item">
                       <a disabled href="javascript:void(0);" class="nav-link disabled">
                         <i class="nav-link-icon lnr-file-empty"></i>
                         <span>
-                                       File Disabled
-                                       </span>
+                                 File Disabled
+                                 </span>
                       </a>
                     </li>
                   </ul>
