--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,18 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+      <%= render "layouts/header"  %>
+      <%= render "layouts/theme-settings"  %>
+      <div class="app-main">
+        <%= render "layouts/left-menu"  %>
+        <div class="app-main__outer">
+          <%= yield %>
+          <%#= render "layouts/footer"  %>
+        </div>
+        <!--    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
+      </div>
+    </div>
     <% unless flash.empty? %>
     <script type="text/javascript">
         <% flash.each do |f| %>
