--- a/app/views/layouts/_left-menu.html.erb
+++ b/app/views/layouts/_left-menu.html.erb
@@ -32,25 +32,25 @@
   <div class="scrollbar-sidebar">
     <div class="app-sidebar__inner">
       <ul class="vertical-nav-menu">
-        <% if show_role(%w(admin)) %>
+        <% if authorized_role(%w(admin)) %>
           <li class="app-sidebar__heading">Administración</li>
           <li>
-            <a href="index.html">
+            <a href="<%= users_path %>" <%= menu_active('users') %>>
               <i class="metismenu-icon pe-7s-users"></i>
               Usuarios
             </a>
           </li>
         <% end %>
-        <% if show_role(%w(admin integrator)) %>
+        <% if authorized_role(%w(admin integrator)) %>
           <li class="app-sidebar__heading">Información</li>
           <li>
-            <a href="index.html" class="mm-active">
+            <a href="index.html">
               <i class="metismenu-icon pe-7s-graph"></i>
               Estadísticas
             </a>
           </li>
         <% end %>
-        <% if show_role(%w(admin integrator)) %>
+        <% if authorized_role(%w(admin integrator)) %>
           <li class="app-sidebar__heading">Páginas Web</li>
           <li>
             <a href="tables-regular.html">
@@ -71,7 +71,7 @@
             </a>
           </li>
         <% end %>
-        <% if show_role(%w(admin integrator client)) %>
+        <% if authorized_role(%w(admin integrator client)) %>
           <li class="app-sidebar__heading">Personal</li>
           <li>
             <a href="index.html">
