--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script type="text/javascript" language="javascript" src="/resources/js/jquery-3.5.1.js"></script>
+    <script type="text/javascript" language="javascript" src="/resources/js/jquery.dataTables.js"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
