--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,7 @@
               <tr>
                 <th class="text-center">Id</th>
                 <th>Nombre / Email</th>
+                <th class="text-center">Teléfono</th>
                 <th class="text-center">Rol</th>
                 <th class="text-center">Acciones</th>
               </tr>
@@ -25,12 +26,13 @@
                     <div class="widget-content p-0">
                       <div class="widget-content-wrapper">
                         <div class="widget-content-left flex2">
-                          <div class="widget-heading">John Doe</div>
+                          <div class="widget-heading"><%= "#{user.name} #{user.surnames}" %></div>
                           <div class="widget-subheading opacity-7"><%= user.email %></div>
                         </div>
                       </div>
                     </div>
                   </td>
+                  <td class="text-center"><%= user.phone %></td>
                   <td class="text-center"><%= pretty_role(user.role) %></td>
                   <td class="text-center">
                     <%= link_to 'Ver', user, class: "btn btn-primary btn-sm" %>
