--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Nombre:</strong>
+  <%= @user.name %>
+</p>
+<p>
+  <strong>Apellidos:</strong>
+  <%= @user.surnames %>
+</p>
+<p>
+  <strong>Teléfono:</strong>
+  <%= @user.phone %>
+</p>
+<p>
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
