--- a/app/assets/stylesheets/jquery.dataTables.scss
+++ b/app/assets/stylesheets/jquery.dataTables.scss
@@ -280,7 +280,7 @@ table.dataTable td {
     text-align: right;
 }
 .dataTables_wrapper .dataTables_filter input {
-    margin-left: 0.5em;
+    //margin-left: 0.5em;
 }
 .dataTables_wrapper .dataTables_info {
     clear: both;
@@ -445,4 +445,8 @@ table.dataTable td {
     .dataTables_wrapper .dataTables_filter {
         margin-top: 0.5em;
     }
+}
+
+.dataTables_margin-top_options {
+  margin-top: 3px;
 }
