Más datos para usuario

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,7 +83,7 @@
                 <%= current_user.email %>
               </div>
               <div class="widget-subheading">
-                <%= pretty_role(current_user.role) %>
+                <%= current_user.full_name %>
               </div>
             </div>
             <div class="widget-content-right header-user-info ml-3">
