--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,6 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <script type="text/javascript" language="javascript" src="/resources/js/jquery-3.5.1.js"></script>
-    <script type="text/javascript" language="javascript" src="/resources/js/jquery.dataTables.js"></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -32,6 +30,9 @@
         <!--    <script src="http://maps.google.com/maps/api/js?sensor=true"></script>-->
       </div>
     </div>
+    <script type="text/javascript" language="javascript" src="/resources/js/main.js"></script>
+    <script type="text/javascript" language="javascript" src="/resources/js/jquery-3.5.1.js"></script>
+    <script type="text/javascript" language="javascript" src="/resources/js/jquery.dataTables.js"></script>
     <% unless flash.empty? %>
     <script type="text/javascript">
         <% flash.each do |f| %>
