--- a/app/views/layouts/_left-menu.html.erb
+++ b/app/views/layouts/_left-menu.html.erb
@@ -1,4 +1,4 @@
-<div class="app-sidebar sidebar-shadow bg-royal sidebar-text-light">
+<div class="app-sidebar sidebar-shadow <%= current_user.sidebar_color %>">
   <div class="app-header__logo">
     <div class="logo-src"></div>
     <div class="header__pane ml-auto">
