--- a/app/views/layouts/_left-menu.html.erb
+++ b/app/views/layouts/_left-menu.html.erb
@@ -85,12 +85,12 @@
               Estilos
             </a>
           </li>
-          <li>
-            <a href="index.html">
-              <i class="metismenu-icon pe-7s-comment"></i>
-              Notificaciones
-            </a>
-          </li>
+<!--          <li>-->
+<!--            <a href="index.html">-->
+<!--              <i class="metismenu-icon pe-7s-comment"></i>-->
+<!--              Notificaciones-->
+<!--            </a>-->
+<!--          </li>-->
           <li>
             <%= link_to destroy_user_session_path do %>
               <i class="metismenu-icon pe-7s-power"></i>
