--- a/app/views/styles/_colors.html.erb
+++ b/app/views/styles/_colors.html.erb
@@ -1,7 +1,7 @@
 <div class="main-card mb-3 card">
   <div class="card-body">
     <h5 class="card-title">Colores</h5>
-    <%= form_with(url: styles_update_path) do %>
+    <%= form_with(id: 'colors', url: styles_update_path) do %>
       <div class="row">
         <div class="col-md-12 col-lg-6">
           <div class="p-3">
@@ -86,11 +86,12 @@
                   </div>
                 </div>
                 <div class="divider"></div>
-                <button class="mb-2 mr-2 btn btn-alternate switch-header-cs-class">Quitar colores</button>
+                <button class="mb-2 mr-2 btn btn-alternate switch-header-cs-class<%= ' active' if current_user.header_color == 'undefined' %>">Quitar colores</button>
               </li>
             </ul>
           </div>
         </div>
+        <%= hidden_field_tag("style[header_color]") %>
         <div class="col-md-12 col-lg-6">
           <div class="p-3">
             <ul class="list-group">
@@ -174,17 +175,20 @@
                   </div>
                 </div>
                 <div class="divider"></div>
-                <button class="mb-2 mr-2 btn btn-alternate switch-sidebar-cs-class">Quitar colores</button>
+                <button class="mb-2 mr-2 btn btn-alternate switch-sidebar-cs-class<%= ' active' if current_user.sidebar_color == 'undefined' %>">Quitar colores</button>
               </li>
             </ul>
           </div>
         </div>
-        <div class="col-md-12 col-lg-12">
-          <div class="p-3">
-            <button class="mb-2 mr-2 btn btn-primary">Guardar cambios</button>
-          </div>
-        </div>
+        <%= hidden_field_tag("style[sidebar_color]") %>
+      </div>
     <% end %>
+    <div class="row">
+      <div class="col-md-12 col-lg-12">
+        <div class="p-3">
+          <button id="button_colors" class="mb-2 mr-2 btn btn-primary" onclick="submitColors();">Guardar cambios</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
