--- a/app/views/styles/_design.html.erb
+++ b/app/views/styles/_design.html.erb
@@ -2,6 +2,7 @@
   <div class="card-body">
     <h5 class="card-title">Diseño</h5>
     <%= form_with(id: 'design', url: styles_update_path) do %>
+      <%= hidden_field_tag("include_design", true) %>
       <div class="p-3">
         <ul class="list-group">
           <li class="list-group-item">
@@ -44,20 +45,9 @@
           </li>
         </ul>
       </div>
-      <div class="p-3">
-        <button class="mb-2 mr-2 btn btn-primary">Guardar cambios</button>
-      </div>
     <% end %>
+    <div class="p-3">
+      <button class="mb-2 mr-2 btn btn-primary" onclick="submitDesign();">Guardar cambios</button>
+    </div>
   </div>
 </div>
-<script>
-    window.addEventListener("load", () => {
-        const element = document.querySelector("#design");
-        element.addEventListener("ajax:success", () => {
-            alert('ok');
-        });
-        element.addEventListener("ajax:error", () => {
-            alert('ko');
-        });
-    });
-</script>
