--- a/app/views/layouts/_left-menu.html.erb
+++ b/app/views/layouts/_left-menu.html.erb
@@ -44,7 +44,7 @@
         <% if authorized_role(%w(admin integrator)) %>
           <li class="app-sidebar__heading">Información</li>
           <li>
-            <a href="index.html">
+            <a href="<%= root_path %>"<%= menu_active('main') %>>
               <i class="metismenu-icon pe-7s-graph"></i>
               Estadísticas
             </a>
