Arreglo primer botón colores

--- a/app/views/styles/_colors.html.erb
+++ b/app/views/styles/_colors.html.erb
@@ -10,7 +10,7 @@
                 <h5 class="pb-2">Cabecera
                 </h5>
                 <div class="theme-settings-swatches">
-                  <div class="swatch-holder bg-primary switch-header-cs-class<%= ' active' if current_user.header_color == ' bg-primary switch-header-cs-class' %>" data-class="bg-primary header-text-light">
+                  <div class="swatch-holder bg-primary switch-header-cs-class<%= ' active' if current_user.header_color == 'bg-primary header-text-light' %>" data-class="bg-primary header-text-light">
                   </div>
                   <div class="swatch-holder bg-secondary switch-header-cs-class<%= ' active' if current_user.header_color == 'bg-secondary header-text-light' %>" data-class="bg-secondary header-text-light">
                   </div>
