Logo y nombre clonaweb

--- a/app/views/styles/_colors.html.erb
+++ b/app/views/styles/_colors.html.erb
@@ -86,7 +86,7 @@
                   </div>
                 </div>
                 <div class="divider"></div>
-                <button class="mb-2 mr-2 btn btn-alternate switch-header-cs-class<%= ' active' if current_user.header_color == 'undefined' %>">Quitar colores</button>
+                <button class="mb-2 mr-2 btn btn-alternate switch-header-cs-class<%= ' active' if current_user.header_color == '' %>">Quitar colores</button>
               </li>
             </ul>
           </div>
@@ -175,7 +175,7 @@
                   </div>
                 </div>
                 <div class="divider"></div>
-                <button class="mb-2 mr-2 btn btn-alternate switch-sidebar-cs-class<%= ' active' if current_user.sidebar_color == 'undefined' %>">Quitar colores</button>
+                <button class="mb-2 mr-2 btn btn-alternate switch-sidebar-cs-class<%= ' active' if current_user.sidebar_color == '' %>">Quitar colores</button>
               </li>
             </ul>
           </div>
