--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,88 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Nombre:</strong>
-  <%= @user.name %>
-</p>
-<p>
-  <strong>Apellidos:</strong>
-  <%= @user.surnames %>
-</p>
-<p>
-  <strong>Teléfono:</strong>
-  <%= @user.phone %>
-</p>
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
-<p>
-  <strong>Rol:</strong>
-  <%= @user.role %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<div class="app-main__inner">
+  <div class="row">
+    <div class="col-lg-4">
+      <div class="main-card mb-3 card">
+        <div class="card-body"><h5 class="card-title">Personal</h5>
+          <table class="mb-0 table">
+            <tbody>
+            <tr>
+              <th>Nombre completo</th>
+              <td><%= @user.full_name %></td>
+            </tr>
+            <tr>
+              <th>Email</th>
+              <td><%= @user.email %></td>
+            </tr>
+            <tr>
+              <th>Teléfono</th>
+              <td><%= pretty_phone(@user.phone) %></td>
+            </tr>
+            <tr>
+              <th>Rol</th>
+              <td><%= pretty_role(@user.role) %></td>
+            </tr>
+            </tbody>
+          </table>
+          <div class="divider"></div>
+          <%= link_to '<i class="pe-7s-pen btn-icon-wrapper">  </i> Editar'.html_safe, edit_user_path(@user), class: "mb-2 mr-2 btn btn-warning" %>
+          <%= link_to 'Volver', users_path, class: "mb-2 mr-2 btn btn-light" %>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="main-card mb-3 card">
+        <div class="card-body"><h5 class="card-title">Estilos</h5>
+          <table class="mb-0 table">
+            <tbody>
+            <tr>
+              <th>Cabecera fija</th>
+              <td><%= pretty_boolean_state(@user.fixed_header) %></td>
+            </tr>
+            <tr>
+              <th>Barra lateral fija</th>
+              <td><%= pretty_boolean_state(@user.fixed_sidebar) %></td>
+            </tr>
+            <tr>
+              <th>Colores</th>
+              <td>
+                <div class="swatch-holder <%= @user.header_color %>"></div>
+                <div class="swatch-holder <%= @user.sidebar_color %>"></div>
+              </td>
+            </tr>
+            <tr>
+              <th>Pestañas</th>
+              <td><%= pretty_boolean_tabs(@user.tab_line) %></td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="main-card mb-3 card">
+        <div class="card-body"><h5 class="card-title">Metadatos</h5>
+          <table class="mb-0 table">
+            <tbody>
+            <tr>
+              <th>Última conexión</th>
+              <td><%= format_time(@user.current_sign_in_at) %></td>
+            </tr>
+            <tr>
+              <th>Fecha creación</th>
+              <td><%= format_time(@user.created_at) %></td>
+            </tr>
+            <tr>
+              <th>Última IP conocida</th>
+              <td><%= pretty_ip(@user.current_sign_in_ip) %></td>
+            </tr>
+            <tr>
+              <th>Última actualziación</th>
+              <td><%= format_time(@user.updated_at) %></td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
