De Clonaweb a ClonWeb

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,4 +1,4 @@
-<title>Clonaweb</title>
+<title>ClonWeb</title>
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 
@@ -16,8 +16,8 @@
 <%= favicon_link_tag asset_path(asset_path("favicon.png")) %>
 
 <!--  WhatsApp-->
-<meta property="og:site_name" content="Clonaweb">
-<meta property="og:title" content="Clonaweb" />
+<meta property="og:site_name" content="ClonWeb">
+<meta property="og:title" content="ClonWeb" />
 <meta property="og:description" content="Proyecto generador de webs" />
 <meta property="og:image" itemprop="image" content="<%= asset_path("whatsapp.jpg") %>">
 <meta property="og:type" content="website" />
