--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,16 @@
   </head>
   <body>
   <div class="app-container app-theme-white<%= ' fixed-sidebar' if current_user.fixed_sidebar %><%= ' fixed-header' if current_user.fixed_header %><%= current_user.tab_line ? ' body-tabs-line' : ' body-tabs-shadow' %>">
-        <%= render "layouts/header"  %>
-        <div class="app-main">
-          <%= render "layouts/left-menu"  %>
-          <div class="app-main__outer">
-            <%= loading_screen color: '#eef1f5', background: '#eef1f5' %>
-            <%= yield %>
-          </div>
-        </div>
+    <%= render "layouts/header"  %>
+    <div class="app-main">
+      <%= render "layouts/left-menu"  %>
+      <div class="app-main__outer">
+        <%= loading_screen color: '#eef1f5', background: '#eef1f5' %>
+        <%= yield %>
       </div>
+    </div>
+    <%= render 'modals' rescue nil %>
+  </div>
     <%= render 'layouts/flash' %>
     <%= render "layouts/body_js" %>
   </body>
