Caducar sesión, quitar barra progreso notificaciones, círculo en los estilos del show de usuario

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,8 +45,8 @@
             <tr>
               <th>Colores</th>
               <td>
-                <div class="swatch-holder <%= @user.header_color %>"></div>
-                <div class="swatch-holder <%= @user.sidebar_color %>"></div>
+                <div class="swatch-holder <%= @user.header_color %> active"></div>
+                <div class="swatch-holder <%= @user.sidebar_color %> active"></div>
               </td>
             </tr>
             <tr>
