--- a/app/views/users/_modals.html.erb
+++ b/app/views/users/_modals.html.erb
@@ -1,35 +1,6 @@
-<script>
-    function reloadModal(userId) {
-        $('#modal-body').hide();
-        $('#modal-p').text("")
-        $.ajax({
-            url: "<%= users_get_user_path %>",
-            type: 'POST',
-            data: { id: userId},
-            success: function(result_ajax){
-                $('#modal-body').show();
-                $('#modal-p').text(result_ajax['user']['id']);
-                console.log(result_ajax['user']['id']);
-            }
-        });
-    }
-</script>
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div id="modal-body" class="modal-body">
-        <p id="modal-p">Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+<% case params[:action] %>
+<% when 'index' %>
+  <%= render "users/modals/form" %>
+<% when 'show' %>
+  <%= render "users/modals/ip_logs" %>
+<% end %>
