--- a/app/views/users/modals/_ip_logs.html.erb
+++ b/app/views/users/modals/_ip_logs.html.erb
@@ -1,4 +1,4 @@
-<div id="ip-logs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div id="ip-logs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="ipLogsModal" aria-hidden="true">
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div id="modal-body" class="modal-body">
