--- a/app/views/users/modals/_ip_logs.html.erb
+++ b/app/views/users/modals/_ip_logs.html.erb
@@ -10,12 +10,12 @@
           </tr>
           </thead>
           <tbody>
-          <% @user.ip_logs.order(change_time: :desc).last(1000).each do |ip_log| %>
-            <tr>
-              <td><%= pretty_time_hhmmss(ip_log.change_time) %></td>
-              <td><%= pretty_ip_location(ip_log.ip) %></td>
-            </tr>
-          <% end %>
+          <%# @user.ip_logs.order(change_time: :desc).last(1000).each do |ip_log| %>
+<!--            <tr>-->
+<!--              <td><%#= pretty_time_hhmmss(ip_log.change_time) %></td>-->
+<!--              <td><%#= pretty_ip_location(ip_log.ip) %></td>-->
+<!--            </tr>-->
+          <%# end %>
           </tbody>
         </table>
       </div>
