--- a/app/views/users/modals/_ip_logs.html.erb
+++ b/app/views/users/modals/_ip_logs.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-sm">
     <div class="modal-content">
       <div id="modal-body" class="modal-body">
-        <table class="mb-0 table table-hover">
+        <table class="mb-0 table table-hover table-bordered">
           <thead>
           <tr>
             <th>Fecha</th>
@@ -10,12 +10,12 @@
           </tr>
           </thead>
           <tbody>
-          <%# @user.ip_logs.order(change_time: :desc).last(1000).each do |ip_log| %>
-<!--            <tr>-->
-<!--              <td><%#= pretty_time_hhmmss(ip_log.change_time) %></td>-->
-<!--              <td><%#= pretty_ip_location(ip_log.ip) %></td>-->
-<!--            </tr>-->
-          <%# end %>
+          <% @user.ip_logs.order(change_time: :desc).last(1000).each do |ip_log| %>
+            <tr>
+              <td><%= pretty_time_hhmmss(ip_log.change_time) %></td>
+              <td><%= pretty_ip_location(ip_log.ip) %></td>
+            </tr>
+          <% end %>
           </tbody>
         </table>
       </div>
