Mejora loading page 2

--- a/app/views/layouts/_loading_screen.html.erb
+++ b/app/views/layouts/_loading_screen.html.erb
@@ -1,5 +1,5 @@
-<div class="loading_screen loading_screen_background" style="background-color: #eef1f5"></div>
-<div class="loading_screen loading_screen_gif" style="display: none;background-color: #eef1f5">
+<div class="loading_screen loading_screen_background"></div>
+<div class="loading_screen loading_screen_gif">
   <div class="loading_screen-gif">
     <img src="<%= asset_path("loading_page.gif") %>">
   </div>
