--- a/app/assets/stylesheets/loading_screen.css
+++ b/app/assets/stylesheets/loading_screen.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: rgb(249,249,249);
+    background-color: #eef1f5
 }
 
 .loading_screen > div {
@@ -13,4 +13,8 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+}
+
+.loading_screen_gif {
+    display: none;
 }
