--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,45 +1,63 @@
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-        <% user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="form-row">
+  <div class="col-md-4">
+    <div class="position-relative form-group">
+      <%= form.label "Nombre" %>
+      <%= form.text_field :name, type: "text", class: "form-control" %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
   </div>
-
-  <div class="field">
-    <%= form.label :surnames %>
-    <%= form.text_field :surnames %>
+  <div class="col-md-8">
+    <div class="position-relative form-group">
+      <%= form.label "Apellidos" %>
+      <%= form.text_field :surnames, type: "text", class: "form-control" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :phone %>
-    <%= form.text_field :phone %>
+</div>
+<div class="form-row">
+  <div class="col-md-4">
+    <div class="position-relative form-group">
+      <%= form.label "Email" %>
+      <%= form.text_field :email, type: "email", class: "form-control" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+  <div class="col-md-4">
+    <div class="position-relative form-group">
+      <%= form.label "Teléfono" %>
+      <%= form.text_field :phone, type: "tel", class: "form-control" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :role %>
-    <%= form.text_field :role %>
+  <div class="col-md-4">
+    <%= form.label "Rol" %>
+    <select name="user[role]" id="role" class="form-control">
+      <option value="admin">Administrador</option>
+      <option value="integrator">Integrador</option>
+      <option value="client">Cliente</option>
+    </select>
   </div>
+</div>
+<% if params[:action] == "new" %>
+  <div class="form-row">
+    <div class="col-md-4">
+      <div class="position-relative form-group">
+        <%= form.label "Contraseña" %>
+        <%= form.password_field :password, type: "password", class: "form-control" %>
+      </div>
+    </div>
+    <!--  <div class="col-md-4">-->
+    <!--    <div class="position-relative form-group">-->
+    <!--      <label for="avatar" class="">Avatar</label>-->
+    <!--      <input name="avatar" id="avatar" type="file" class="form-control-file">-->
+    <!--    </div>-->
+    <!--  </div>-->
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
+    <!--  <div class="col-md-4">-->
+    <%#= form.label "Check" %>
+    <!--    <div class="position-relative form-check"><input name="check" id="exampleCheck" type="checkbox" class="form-check-input"><label for="exampleCheck" class="form-check-label">Check me out</label></div>-->
+    <!--  </div>-->
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+<% end %>
+<div class="form-row">
+  <div class="col-md-12">
+    <%= form.submit 'Guardar', class: "mt-2 btn btn-primary" %>
+    <%= link_to 'Volver', users_path, class: "mt-2 btn btn-light" %>
   </div>
+</div>
