--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,13 @@
-<h1>New User</h1>
-
-<%= form_with(model: @user, local: true, url: users_create_user_path) do |form| %>
-  <%= render 'form', user: @user, form: form %>
-<% end %>
-
-<%= link_to 'Back', users_path %>
+<div class="app-main__inner">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="main-card mb-3 card">
+        <div class="card-body"><h5 class="card-title">Crear usuario</h5>
+          <%= form_with(model: @user, local: true) do |form| %>
+            <%= render 'users/form', user: @user, form: form %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
